--- a/devitti/src/main/AndroidManifest.xml
+++ b/devitti/src/main/AndroidManifest.xml
@@ -4,29 +4,31 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="17" />
 
-    <uses-permission
-        android:name="android.permission.INTERNET"
-        > </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
-    <uses-permission
-        android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"
-        ></uses-permission>
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        >
-
-
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.please.devitti.JSONUseActivity"
             android:label="@string/app_name" >
@@ -36,7 +38,6 @@
                 <category android:name="android.intent.category.default" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.example.please.devitti.MainActivity"
             android:label="@string/app_name" >
@@ -47,37 +48,31 @@
             </intent-filter>
         </activity>
 
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.gms.version" -->
+        <!-- android:value="@integer/google_play_services_version" /> -->
 
-        <!--<meta-data-->
-        <!--android:name="com.google.android.gms.version"-->
-        <!--android:value="@integer/google_play_services_version" />-->
 
-        <!--<uses-library android:name="com.google.android.maps" />-->
+        <!-- <uses-library android:name="com.google.android.maps" /> -->
 
         <activity
             android:name="com.example.please.devitti.HelperMainGui"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.example.please.devitti.NeedyMainGui"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
         </activity>
-
-
-
         <activity
             android:name="com.example.please.devitti.SignIn"
             android:label="Signin View" >
@@ -87,7 +82,6 @@
                 <category android:name="android.itent.category.default" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.example.please.devitti.SignUp"
             android:label="SignUp View" >
@@ -97,7 +91,6 @@
                 <category android:name="android.intent.category.default" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.example.please.devitti.HelperSearch"
             android:label="SignUp View" >
@@ -107,7 +100,6 @@
                 <category android:name="android.intent.category.default" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.example.please.devitti.NeedyMakeACause"
             android:label="SignUp View" >
@@ -116,9 +108,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name="com.example.please.devitti.NeedyExistingCauses"
             android:label="SignUp View" >
@@ -127,9 +117,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name="com.example.please.devitti.HelperOwnProfile"
             android:label="SignUp View" >
@@ -138,10 +126,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
-
         <activity
             android:name="com.example.please.devitti.HelperFeed"
             android:label="SignUp View" >
@@ -150,10 +135,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
-
         <activity
             android:name="com.example.please.devitti.HelperSearchResult"
             android:label="SignUp View" >
@@ -162,11 +144,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
-
-
         <activity
             android:name="com.example.please.devitti.MapSearch"
             android:label="SignUp View" >
@@ -175,11 +153,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
-
-
         <activity
             android:name="com.example.please.devitti.NeedyClickOnOwnCause"
             android:label="SignUp View" >
@@ -188,11 +162,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
-
-
         <activity
             android:name="com.example.please.devitti.NeedyProfile"
             android:label="SignUp View" >
@@ -201,10 +171,7 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
-
-
         <activity
             android:name="com.example.please.devitti.NeedyOthersClickOnCause"
             android:label="SignUp View" >
@@ -213,8 +180,6 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
-
         </activity>
         <activity
             android:name="com.example.please.devitti.CauseFullDetailView"
@@ -224,21 +189,19 @@
 
                 <category android:name="android.intent.category.default" />
             </intent-filter>
-
         </activity>
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
 
-
-
-
-
-
-
-
-
-
-
-
+        <activity
+            android:name="com.example.please.devitti.Maps"
+            android:label="@string/title_activity_maps" >
+        </activity>
     </application>
 
 </manifest>
